# reflspeckit

./: README.md  pyproject.toml
src/reflspeckit/: __init__.py  _errors.py  data_classes.py  linear_fitting.py  misc_utils.py
src/reflspeckit/spec1D/: __init__.py  absorption_feature1d.py  continuum_removal.py  filtering.py  outlier_detection.py  polyfit.py  spec1d.py  utils.py
src/reflspeckit/spec3D/: Spec3D.py  __init__.py  absorption_feature3d.py  continuum_removal.py  filtering.py  outlier_detection.py  polyfit.py  utils.py
src/reflspeckit/utils/: __init__.py  get_nonzero.py  rgb_composite.py  wvl_search.py
src/spectralcubekit/: __init__.py  band_parameters.py
