[project]
name = "spectralcubekit"
version = "0.1.1"
description = """Utility package for working with spectral data cubes."""
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
keywords = ["hyperspectral", "processing", "spectral cube", "image"]
license = {text = "LICENSE"}
urls = {
    "Homepage" = "https://github.com/z-vig/spectralcubekit.git",
    "Repository" = "https://github.com/z-vig/spectralcubekit.git",
}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0)",
    "astropy (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
