[project]
name = "reflspeckit"
version = "0.1.5"
description = """Utility package for working with spectral data cubes."""
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
keywords = ["hyperspectral", "processing", "spectral cube", "image"]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0)",
    "astropy (>=7.1.0,<8.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scipy-stubs (>=1.16.3.0,<2.0.0.0)"
]

[project.urls]
Homepage = "https://github.com/z-vig/spectralcubekit.git"
Repository = "https://github.com/z-vig/spectralcubekit.git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
